<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/bg_main"
    tools:context=".ui.favorite.FavoriteFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@drawable/bg_secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_favorite"
            android:fontFamily="@font/mona_sans_semibold"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/img_illustration"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginStart="-32dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/this_is_image"
        android:src="@drawable/no_favorite_illustration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/mona_sans_extrabold"
        android:text="@string/title_no_favorite"
        android:textColor="@color/bluish_purple"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/img_illustration"
        app:layout_constraintStart_toStartOf="@+id/img_illustration"
        app:layout_constraintTop_toBottomOf="@+id/img_illustration" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:text="@string/no_favorite_description"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAlignment="center"
        android:fontFamily="@font/mona_sans_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
</androidx.constraintlayout.widget.ConstraintLayout>